--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <link href="styles/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="styles/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Peek-a-boo</title>
 <body>
   <div class="container">
     <h1>Peek-a-boo</h1>
       <p><strong>Peek-a-boo</strong> is an ancient game riddled in mystery and deceit. Though it appears to be an innocent children's pastime, you may change your mind when you learn of its treacherous history.</p>
 
     <div id="walrus-hidden">
-      <p>Let's play peek-a-boo. <span class="clickable">Click here</span> to see the surprise!</p>
+      <p>Let's play peek-a-boo. <span class="click-walrus">Click here</span> to see the surprise!</p>
     </div>
 
     <div id="walrus-showing">
-      <p>What a cute walrus! <span class="clickable">Click here</span> to hide her again.</p>
-      <img src="img/walrus.jpg">
+      <p>What a cute walrus! <span class="click-walrus">Click here</span> to hide her again.</p>
+      <img id="walrus" src="walrus.jpg">
     </div>
-  </div>
+    <h1>The walrus' best friend</h1>
+    <div id="penguin-showing">
+      <p>THe walrus' best friend likes to play peek-a-boo as well!! <span class="click-penguin">Click Here</span> to play with the penguin.</p>
+      <img id="penguin" src="penguin.jpg">
+    </div>
+    <div id="penguin-hidden">
+      <p>That looked fun! <span class="click-penguin">Click Here</span> to play again!</p>
+    </div>
+
 </body>
+</html>
